bitsandbytes/bits/tests/ui/generic_struct.stderr
error: #[wire] does not support generic parameters or lifetimes
 --> tests/ui/generic_struct.rs:4:9
  |
4 | struct X<T> {
  |         ^^^
