bitsandbytes/bits/tests/ui/generic_struct.rs
use bits::wire;

#[wire(big)]
struct X<T> {
    a: T,
}

fn main() {}
